crates/cuda-oxide/crates/cuda-device/tests/compile_fail/thread_index_stride_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_index_stride_mismatch.rs:11:25
   |
11 |     let _ = out.get_mut(idx);
   |                 ------- ^^^ expected `100`, found `200`
   |                 |
   |                 arguments to this method are incorrect
   |
   = note: expected struct `ThreadIndex<'_, Index2D<100>>`
              found struct `ThreadIndex<'_, Index2D<200>>`
note: method defined here
  --> src/disjoint.rs
   |
   |     pub fn get_mut<'kernel>(&mut self, idx: ThreadIndex<'kernel, IndexSpace>) -> Option<&mut T> {
   |            ^^^^^^^
